--- a/local.settings.json
+++ b/local.settings.json
@@ -5,7 +5,12 @@
     "AzureWebJobsStorage": "{AzureWebJobsStorage}",
     "ExampleJSONHTTPFunction_Name": "ExampleJSONHTTPFunction",
     "ExampleJSONHTTPFunction_Managed": "false",
-    "ExampleJSONHTTPFunction_Role": "{\"_action\": \"celastrina\", \"_roles\": [\"test123\"], \"_match\": {\"_type\": \"MatchAny\"}}",
-    "ExampleJSONHTTPFunction_AppAuth": "{\"_authority\":\"https://login.microsoftonline.com\", \"_tenant\": \"b5fd4f0d-eebb-430c-ba14-72578dd91324\", \"_id\":\"bb7003ed-a22b-43bc-bc74-7ba3a1bf5a2c\", \"_secret\":\"qlqSRCcwBDyx3.E648O:nW]zd?USgxAU\", \"_resources\": [\"https://vault.azure.net\", \"https://datalake.azure.net/\"]}"
+    "ExampleJSONHTTPFunction_Role": "{\"_action\": \"post\", \"_roles\": [\"test123\"], \"_match\": {\"_type\": \"MatchAny\"}}",
+    "ExampleJSONHTTPFunction_AppAuth": "{\"_authority\":\"https://login.microsoftonline.com\", \"_tenant\": \"3072ddb6-0bfb-4853-99a8-e5c5c7f4779e\", \"_id\":\"6d85cd94-7ae1-40e6-8104-db62c5e8a63a\", \"_secret\":\"H{Zpi9BC2Mi+d]o=0>Deu(B^\", \"_resources\": [\"https://vault.azure.net\", \"https://datalake.azure.net/\"]}",
+    "ExampleJwtJSONHTTPFunction_Name": "ExampleJwtJSONHTTPFunction",
+    "ExampleJwtJSONHTTPFunction_Managed": "false",
+    "ExampleJwtJSONHTTPFunction_Role": "{\"_action\": \"post\", \"_roles\": [\"test123\"], \"_match\": {\"_type\": \"MatchAny\"}}",
+    "ExampleJwtJSONHTTPFunction_AppAuth": "{\"_authority\":\"https://login.microsoftonline.com\", \"_tenant\": \"3072ddb6-0bfb-4853-99a8-e5c5c7f4779e\", \"_id\":\"6d85cd94-7ae1-40e6-8104-db62c5e8a63a\", \"_secret\":\"H{Zpi9BC2Mi+d]o=0>Deu(B^\", \"_resources\": [\"https://vault.azure.net\", \"https://datalake.azure.net/\"]}",
+    "ExampleJwtJSONHTTPFunction_Issuer": "{\"_name\": \"https://democelastrinajscom.b2clogin.com/3072ddb6-0bfb-4853-99a8-e5c5c7f4779e/v2.0/\", \"_audience\":\"6d85cd94-7ae1-40e6-8104-db62c5e8a63a\", \"_roles\":[\"test123\"]}"
   }
 }
