--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina_demo#readme",
   "dependencies": {
-    "@celastrina/core": "^1.0.21-beta",
-    "@celastrina/http": "^1.0.21-beta"
+    "@celastrina/core": "^1.0.33beta",
+    "@celastrina/http": "^1.0.33beta"
   }
 }
